// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Normal switch renders correctly 1`] = `
<div
  className="lui-switch"
>
  <label
    className="lui-switch__label"
  >
    <input
      checked={true}
      className="lui-switch__checkbox"
      type="checkbox"
    />
    <span
      className="lui-switch__wrap"
    >
      <div
        className="lui-switch__inner"
      />
      <div
        className="lui-switch__switch"
      />
    </span>
  </label>
</div>
`;

exports[`Switch with modifiers renders correctly 1`] = `
<div
  className="lui-switch lui-switch--inverse"
>
  <label
    className="lui-switch__label"
  >
    <input
      checked={true}
      className="lui-switch__checkbox"
      type="checkbox"
    />
    <span
      className="lui-switch__wrap"
    >
      <div
        className="lui-switch__inner"
      />
      <div
        className="lui-switch__switch"
      />
    </span>
  </label>
</div>
`;

exports[`Switch with states renders correctly 1`] = `
<div
  className="lui-switch lui-active"
>
  <label
    className="lui-switch__label"
  >
    <input
      checked={true}
      className="lui-switch__checkbox"
      disabled={true}
      type="checkbox"
    />
    <span
      className="lui-switch__wrap"
    >
      <div
        className="lui-switch__inner"
      />
      <div
        className="lui-switch__switch"
      />
    </span>
  </label>
</div>
`;
